--- a/modules/generators/structured_content/hackerbot_config/live_analysis_v2/templates/live_evidence_collection.md.erb
+++ b/modules/generators/structured_content/hackerbot_config/live_analysis_v2/templates/live_evidence_collection.md.erb
@@ -132,18 +132,20 @@ ssh <%= $compromised_server_ip %> "/media/cdrom0/statbins/linux2.2_x86/ls /proc"
 
 **On your Desktop VM**, find the newly created files and ==compare the list of pids (numbers representing processes) output from the previous commands==. This is the second column of output in the ps\_out, with the numbers in proc\_ls\_static.
 
-Hint: you can do the comparison manually, or using commands such as "cut" (or [*awk*](http://lmgtfy.com/?q=use+awk+to+print+column)), "sort", and "diff". For example, `cat ps_out | awk '{ print $4 }'` will pipe the contents of the file ps\_out into the awk command, which will split on spaces, and only display the fourth field. Ensure this is displaying the list of pids, if not try selecting a different field. You could pipe this through to "sort". Then save that to a file (by appending " &gt; pids\_ps\_out"). We have covered how to use diff previously. Remember "man awk", "man sort", and "man diff" will tell you about how to use the commands (and Google may also come in handy).
+Hint: you can do the comparison manually, or using commands such as "cut" (or [*awk*](http://lmgtfy.com/?q=use+awk+to+print+column)), "sort", and "diff". For example, `cat ps_out | awk '{ print $4 }'` will pipe the contents of the file ps\_out into the awk command, which will split on spaces, and only display the fourth field. Ensure this is displaying the list of pids, if not try selecting a different field. You could pipe this through to "sort". Then save that to a file (by appending " &gt; pids\_ps\_out"). Remember "man awk", "man sort", and "man diff" will tell you about how to use the commands (and Google may also come in handy).
 
-Are the same processes shown each time? If not, that is very suspicious, and likely indicates a break-in, and that we probably shouldn't trust the output of local commands.
+Are the same processes shown each time? Can you explain why the outputs from different tools are giving you a different picture of the system? If not, that is very suspicious, and likely indicates a break-in, and that we probably shouldn't trust the output of local commands.
 
-c## Gathering live state using statically compiled programs
+> Note that some changes are to expected simply due to timing, such as short running processes, including the commands you are actually running to do your investigation. However, you wouldn't expect processes that are consistently running to not be visible in ps, etc.
+
+## Gathering live state using statically compiled programs
 
 **On the compromised_server VM**, save a copy of a list of inodes of removed files that are still open or executing:
 
 ```bash
-ssh <%= $compromised_server_ip %> "/media/cdrom0/statbins/linux2.2_x86/ils -o /dev/hda1" > evidence/deleted_out
+ssh -t <%= $compromised_server_ip %> "sudo /media/cdrom0/statbins/linux2.2_x86/ils -o /dev/sda1" > evidence/deleted_out
 ```
-> Tip: on VMware VMs, you may need to replace "hda1" with "sda1".
+> Tip: on some VMs, you may need to replace "hda1" for "sda1".
 > Also, there might not be any output if there are no deleted files being accessed.
 
 Save a list of the files currently being accessed by programs:
@@ -213,14 +215,14 @@ Start by identifying the device files for the partitions on the compromised syst
 df
 ```
 
-Note that on this system the root partition (mounted on "/"), is /dev/hda1.
+Note that on this system the root partition (mounted on "/"), is /dev/sda1.
 
-> Help: on VMware VMs only, you may need to replace "hda1" with "sda1".
+> Help: on some VMs, you may need to replace "hda1" with "sda1".
 
-Then **you could** (see the tip below) copy byte-for-byte the contents of the entire root ("/") partition over the network (where /dev/hda1 was identified from the previous command):
+Then **you could** (see the tip below) copy byte-for-byte the contents of the entire root ("/") partition over the network (where /dev/sda1 was identified from the previous command):
 
 ```bash
-ssh <%= $compromised_server_ip %> "/media/cdrom0/statbins/linux2.2_x86/dd if=/dev/hda1 conv=noerror,sync" > evidence/hda1.img
+ssh <%= $compromised_server_ip %> "/media/cdrom0/statbins/linux2.2_x86/dd if=/dev/sda1 conv=noerror,sync" > evidence/sda1.img
 ```
 > Tip: Feel free to skip this step. Running this will take some time, so you may wish to continue with the next step while the copying runs.
 
