--- a/modules/generators/structured_content/hackerbot_config/hacker_vs_hackerbot_2/templates/lab.xml.erb
+++ b/modules/generators/structured_content/hackerbot_config/hacker_vs_hackerbot_2/templates/lab.xml.erb
@@ -33,6 +33,7 @@
   $example_dir = "/home/#{$second_user}/personal_secrets/"
 
   $web_server_ip = self.web_server_ip.first
+  $compromised_server_ip = self.web_server_ip.first
   $ids_server_ip = self.ids_server_ip.first
   $backup_server_ip = self.backup_server_ip.first
   $desktop_ip = self.desktop_ip.first
