--- a/modules/generators/structured_content/hackerbot_config/hacker_vs_hackerbot_2/templates/intro.md.erb
+++ b/modules/generators/structured_content/hackerbot_config/hacker_vs_hackerbot_2/templates/intro.md.erb
@@ -5,7 +5,7 @@
 In the unlikely event you experience technical issues with our infrastructure during the test, which you believe to be outside your control, let us know before you leave the room. However, keep in mind we won't give hints for the actual test challenges.
 
 ## Getting started
-### VMs in this lab
+### VMs in this test
 
 ==Start these VMs== (if you haven't already):
 
@@ -15,7 +15,7 @@ In the unlikely event you experience technical issues with our infrastructure du
 - compromised_server (IP address: <%= $compromised_server_ip %>)
 - desktop
 
-All of these VMs need to be running to complete the lab.
+All of these VMs need to be running to complete the test.
 
 ### Your login details for the "desktop" and server VMs
 User: <%= $main_user %>
