--- a/modules/generators/structured_content/hackerbot_config/hbauthentication/templates/intro.md.erb
+++ b/modules/generators/structured_content/hackerbot_config/hbauthentication/templates/intro.md.erb
@@ -7,7 +7,7 @@
 - hackerbot_server (leave it running, you don't log into this)
 - desktop (you can sudo to get superuser access)
 - server (<%= $server_ip %>, you can ssh to this machine, but you don't have superuser access)
-- kali_cracker (you will use this to crack the hashes you find)
+- kali_cracker (user: root, password: toor, you will use this to crack the hashes you find)
 
 ### Your login details for the "desktop" and "server" VMs
 User: <%= $main_user %>
